@@ -28,6 +28,11 @@ type = subdir
 [sss]
 # Install this as a sourcelibrary, so it will work on any platform/compiler combination
 type = sourcelibrary
+exclude = sss/dsss_lib_test.d sss/dsssdll.d sss/main.d sss/stub.d
+buildflags = -Irebuild
+
+# dsss_lib_test is special, so put it in share/
+postinstall = install sss/dsss_lib_test.d $PREFIX/share/dsss
 
 version (Windows) {
     # Necessary on Windows, worthless elsewhere
